<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- begin strings -->

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="time_string">19:02</string>
    <string name="good_evening____string">Good Evening !</string>
    <string name="username_string">Username</string>
    <string name="forgot_password__string">Forgot Password?</string>
    <string name="password_string">Password</string>
    <string name="login_string">Login</string>
    <string name="don_t_have_an_account__sign_up_string">Dont have an account?  Sign Up</string>
    <string name="enter_the_email_associated_with_your_account__string">Enter the email associated with your account.</string>
    <string name="email_address_string">Email address</string>
    <string name="abcd_gmail_com_string">abcd@gmail.com</string>
    <string name="send_string">Send</string>
    <string name="reset_password_string">Reset password</string>
    <string name="register_string">Register</string>
    <string name="name_string">Name</string>
    <string name="phone_number_string">Phone Number</string>
    <string name="email_string">Email</string>
    <string name="nic_number_string">NIC Number</string>
    <string name="create_account_string">Create Account</string>
    <string name="alexandria_s_tram_prediction_string">Alexandrias Tram Prediction</string>
    <string name="skip_string">Skip</string>
    <string name="this_app_will_provide_accurate_tram_arriving_time_at_selected_stations_string">This app will provide accurate tram arriving time at selected stations</string>
    <string name="get_started_string">Get Started</string>
    <string name="find_your_trains_easily_and_buy_tickets_online__string">Find your trains easily and buytickets online.</string>
    <string name="next_string">Next</string>
    <string name="find_your_train_easily_string">Find your train easily</string>
    <string name="victoria_string">Victoria</string>
    <string name="sidi_gaber_string">Sidi Gaber</string>
    <string name="from_string">From </string>
    <string name="to_string">To</string>
    <string name="estimated_destination_time_string">Estimated Destination Time</string>
    <string name="sidi_gaber_ek1_string">Sidi Gaber</string>
    <string name="arrival_in_31mins_string">Arrival in 31mins</string>
    <string name="arrival_time__string">Arrival Time:</string>
    <string name="victoria_ek1_string">Victoria</string>
    <string name="predicted_time_string">Predicted Time</string>
    <string name="_notifications_ek3_string">Notifications</string>
    <string name="today_string">Today</string>
    <string name="yesterday_string">Yesterday</string>
    <string name="the_train_from_colombo_to_aluthgama_now_arrives_at_the_1st____string">The train from Colombo to Aluthgama now arrives at the 1st...</string>
    <string name="the_express_train_from_colombo_to_galle_will_be_delayed__string">The  express train from Colombo to Galle will be delayed.</string>
    <string name="visit_our_website_today__www_railway_gov_lk_string">Visit our website today.www.railway.gov.lk</string>
    <string name="your_train_kts_mda_1122_is_arriving_now_string">Your train KTS/MDA-1122 is arriving now</string>
    <string name="ticket_purchase_successful__string">Ticket purchase successful.</string>
    <string name="ticket_purchase_successful__ek1_string">Ticket purchase successful.</string>
    <string name="now_string">Now</string>
    <string name="_20_may_string">20 May</string>
    <string name="_20_may_ek1_string">20 May</string>
    <string name="_5_min_string">5 min</string>
    <string name="_20_may_ek2_string">20 May</string>
    <string name="_20_may_ek3_string">20 May</string>
    <string name="schedule_ek3_string">Schedule</string>
    <string name="start_station__string">Start Station:</string>
    <string name="end_station__string">End Station:</string>
    <string name="start_time__string">Start Time:</string>
    <string name="end_time__string">End Time:</string>
    <string name="date__string">Date:</string>
    <string name="dd__mm__yy_string">DD/ MM/ YY</string>
    <string name="search_train_string">Search Train</string>
    <string name="__select__string">-SELECT-</string>
    <string name="__select__ek1_string">-SELECT-</string>
    <string name="__select__ek2_string">-SELECT-</string>
    <string name="__select__ek3_string">-SELECT-</string>
    <string name="fort_railway_station_string">Fort Railway Station</string>
    <string name="fort_railway_station_is_a_major_rail_hub_in_colombo__sri_lanka__the_station_is_served_by_sri_lanka_railways__with_many_inter_city_and_commuter_trains_entering_each_day__fort_station_is_the_main_rail_gateway_to_central_colombo__it_is_the_terminus_of_most_intercity_trains_in_the_country__string">Fort railway station is a major rail hub in Colombo, Sri Lanka. The station is served by Sri Lanka Railways, with many inter-city and commuter trains entering each day. Fort Station is the main rail gateway to central Colombo; it is the terminus of most intercity trains in the country.</string>
    <string name="address__string">Address:</string>
    <string name="head_of_the_organization__string">Head of the Organization:</string>
    <string name="general_information_string">General Information</string>
    <string name="hours__string">Hours:</string>
    <string name="phone__string">Phone:</string>
    <string name="fax_nos___string">Fax Nos : </string>
    <string name="telephones___string">Telephones : </string>
    <string name="email__string">Email:</string>
    <string name="colombo_string">Colombo</string>
    <string name="mr__jayasundara_string">Mr. Jayasundara</string>
    <string name="__94_11_2_446490_string">+94 11 2 446490</string>
    <string name="__94_11_4_600_111_string">+94 11 4 600 111</string>
    <string name="gmr_railway_gov_lk_string">gmr@railway.gov.lk</string>
    <string name="open___24_hours_string">Open - 24 Hours </string>
    <string name="_011_2434215_string"> 011 2434215</string>
    <string name="_abanpola_string">Abanpola</string>
    <string name="agbopura_string">Agbopura</string>
    <string name="ahungalle_string">Ahungalle</string>
    <string name="akurala_string">Akurala</string>
    <string name="alawwa_string">Alawwa</string>
    <string name="alawathupitiya_string">Alawathupitiya</string>
    <string name="aluthgama_string">Aluthgama</string>
    <string name="ambalangoda_string">Ambalangoda</string>
    <string name="ambepussa_string">Ambepussa</string>
    <string name="aluthgama_ek1_string">Aluthgama</string>
    <string name="badulla_string">Badulla</string>
    <string name="balapitiya_string">Balapitiya</string>
    <string name="babarenda_string">Babarenda</string>
    <string name="bambalapitiya_string">Bambalapitiya</string>
    <string name="bandarawela_string">Bandarawela</string>
    <string name="bangadeniya_string">Bangadeniya</string>
    <string name="batticaloa_string">Batticaloa</string>
    <string name="batuwatta_string">Batuwatta</string>
    <string name="chavakachcheri_string">Chavakachcheri</string>
    <string name="_colombo_fort_string">Colombo Fort</string>
    <string name="a_string">A</string>
    <string name="b_string">B</string>
    <string name="c_string">c</string>
    <string name="_stations_ek3_string">Stations</string>
    <string name="search____string">Search...</string>
    <string name="good_evening___7amo_string">Good Evening !  7amo</string>
    <string name="trips_string">Trips</string>
    <string name="trains_string">Trains</string>
    <string name="trains_ek1_string">Trains</string>
    <string name="schedule_string">Schedule</string>
    <string name="notifications_string">Notifications</string>
    <string name="stations_string">Stations</string>
    <string name="hurstbridge_line_string">Hurstbridge line</string>
    <string name="_12_15_pm___1_19_pm_string">12:15 PM - 1:19 PM</string>
    <string name="_1_hr_4_min_string">1 hr 4 min</string>
    <string name="from_eltham_station_string">From Eltham Station</string>
    <string name="to_melbourne_central_station_string">To Melbourne Central Station</string>
    <string name="hurstbridge_line_ek1_string">Hurstbridge line</string>
    <string name="_12_15_pm___1_19_pm_ek1_string">12:15 PM - 1:19 PM</string>
    <string name="_1_hr_4_min_ek1_string">1 hr 4 min</string>
    <string name="from_eltham_station_ek1_string">From Eltham Station</string>
    <string name="to_melbourne_central_station_ek1_string">To Melbourne Central Station</string>
    <string name="hurstbridge_line_ek2_string">Hurstbridge line</string>
    <string name="_12_15_pm___1_19_pm_ek2_string">12:15 PM - 1:19 PM</string>
    <string name="_1_hr_4_min_ek2_string">1 hr 4 min</string>
    <string name="from_victoria_string">From Eltham Station</string>
    <string name="to_melbourne_central_station_ek2_string">To Melbourne Central Station</string>
    <string name="hurstbridge_line_ek3_string">Hurstbridge line</string>
    <string name="_12_15_pm___1_19_pm_ek3_string">12:15 PM - 1:19 PM</string>
    <string name="_1_hr_4_min_ek3_string">1 hr 4 min</string>
    <string name="from_eltham_station_ek2_string">From Eltham Station</string>
    <string name="to_melbourne_central_station_ek3_string">To Melbourne Central Station</string>
    <string name="hurstbridge_line_ek4_string">Hurstbridge line</string>
    <string name="_12_15_pm___1_19_pm_ek4_string">12:15 PM - 1:19 PM</string>
    <string name="_1_hr_4_min_ek4_string">1 hr 4 min</string>
    <string name="from_eltham_station_ek3_string">From Eltham Station</string>
    <string name="to_melbourne_central_station_ek4_string">To Melbourne Central Station</string>
    <string name="hurstbridge_line_ek5_string">Hurstbridge line</string>
    <string name="_12_15_pm___1_19_pm_ek5_string">12:15 PM - 1:19 PM</string>
    <string name="_1_hr_4_min_ek5_string">1 hr 4 min</string>
    <string name="from_eltham_station_ek4_string">From Eltham Station</string>
    <string name="to_melbourne_central_station_ek5_string">To Melbourne Central Station</string>


    <string name="app_version_1_0_0_0_string">App version 1.0.0.0</string>
    <string name="notification_string">Notification</string>

    <string name="from_victoria_ek1_string">From Eltham Station</string>

    <string name="from_victoria_ek2_string">From Eltham Station</string>

    <string name="from_victoria_ek3_string">From Eltham Station</string>
</resources>