<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		bxs_wallet
	 *	@date 		Saturday 28th of October 2023 06:28:32 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/stations" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_stations_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__stations_ek2"
					android:background="@drawable/_bg__stations_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="428dp"
					android:layout_height="1404dp" />


				<RelativeLayout android:id="@+id/frame_3"
					android:layout_marginTop="220dp"
					android:layout_marginStart="28dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__frame_3_ek1"
						android:background="@drawable/_bg__frame_3_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="372dp"
						android:layout_height="1180dp" />

					<View   android:id="@+id/rectangle_51"
						android:background="@drawable/rectangle_51_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="372dp"
						android:layout_height="1180dp" />

					<TextView android:id="@+id/_abanpola"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="72dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/_abanpola_string"
						 />

					<TextView android:id="@+id/agbopura"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="121dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/agbopura_string"
						 />

					<TextView android:id="@+id/ahungalle"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="171dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/ahungalle_string"
						 />

					<TextView android:id="@+id/akurala"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="221dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/akurala_string"
						 />

					<TextView android:id="@+id/alawwa"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="271dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/alawwa_string"
						 />

					<TextView android:id="@+id/alawathupitiya"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="321dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/alawathupitiya_string"
						 />

					<TextView android:id="@+id/aluthgama"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="371dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/aluthgama_string"
						 />

					<TextView android:id="@+id/ambalangoda"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="421dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/ambalangoda_string"
						 />

					<TextView android:id="@+id/ambepussa"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="471dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/ambepussa_string"
						 />

					<TextView android:id="@+id/aluthgama_ek1"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="521dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/aluthgama_ek1_string"
						 />

					<TextView android:id="@+id/badulla"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="611dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/badulla_string"
						 />

					<TextView android:id="@+id/balapitiya"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="661dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/balapitiya_string"
						 />

					<TextView android:id="@+id/babarenda"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="711dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/babarenda_string"
						 />

					<TextView android:id="@+id/bambalapitiya"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="761dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/bambalapitiya_string"
						 />

					<TextView android:id="@+id/bandarawela"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="811dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/bandarawela_string"
						 />

					<TextView android:id="@+id/bangadeniya"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="861dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/bangadeniya_string"
						 />

					<TextView android:id="@+id/batticaloa"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="33dp"
						android:layout_marginTop="911dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/batticaloa_string"
						 />

					<TextView android:id="@+id/batuwatta"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="36dp"
						android:layout_marginTop="961dp"
						android:layout_width="178.2dp"
						android:layout_height="33.2dp"
						android:text="@string/batuwatta_string"
						 />

					<TextView android:id="@+id/chavakachcheri"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="36dp"
						android:layout_marginTop="1051dp"
						android:layout_width="189.2dp"
						android:layout_height="33.2dp"
						android:text="@string/chavakachcheri_string"
						 />

					<TextView android:id="@+id/_colombo_fort"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="36dp"
						android:layout_marginTop="1101dp"
						android:layout_width="189.2dp"
						android:layout_height="33.2dp"
						android:text="@string/_colombo_fort_string"
						 />

				</RelativeLayout>

				<TextView android:id="@+id/a"
					android:textStyle="bold"
					android:textSize="22sp"
					android:textColor="@color/_bg__frame_3_ek1_color"
					android:layout_marginLeft="36dp"
					android:layout_marginTop="238dp"
					android:layout_width="33.2dp"
					android:layout_height="54.2dp"
					android:text="@string/a_string"
					 />

				<TextView android:id="@+id/b"
					android:textStyle="bold"
					android:textSize="22sp"
					android:textColor="@color/_bg__frame_3_ek1_color"
					android:layout_marginLeft="36dp"
					android:layout_marginTop="777dp"
					android:layout_width="33.2dp"
					android:layout_height="54.2dp"
					android:text="@string/b_string"
					 />

				<TextView android:id="@+id/c"
					android:textStyle="bold"
					android:textSize="22sp"
					android:textColor="@color/_bg__frame_3_ek1_color"
					android:layout_marginLeft="36dp"
					android:layout_marginTop="1217dp"
					android:layout_width="29.2dp"
					android:layout_height="54.2dp"
					android:text="@string/c_string"
					 />

				<View   android:id="@+id/_home_indicator"
					android:background="@drawable/_home_indicator_shape"
					 android:layout_marginStart="150dp"
					android:layout_marginTop="1395dp"
					android:layout_width="134dp"
					android:layout_height="5dp" />

				<View   android:id="@+id/rectangle_52"
					android:background="@drawable/rectangle_52_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="428dp"
					android:layout_height="220dp" />

				<TextView android:id="@+id/_stations_ek3"
					android:textStyle="bold"
					android:textSize="22sp"
					android:textColor="@color/_stations_ek3_color"
					android:layout_marginLeft="48dp"
					android:layout_marginTop="64dp"
					android:layout_width="102.2dp"
					android:layout_height="54.2dp"
					android:text="@string/_stations_ek3_string"
					 />

				<ImageView android:id="@+id/_vector"
					android:src="@drawable/_vector"
					android:contentDescription="_vector"
					 android:layout_marginStart="28dp"
					android:layout_marginTop="82dp"
					android:layout_width="10.21dp"
					android:layout_height="17.5dp" />


				<RelativeLayout android:id="@+id/iphone_status_bar"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__iphone_status_bar_ek1"
						android:background="@drawable/_bg__iphone_status_bar_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="428dp"
						android:layout_height="44dp" />

					<ImageView android:id="@+id/wifi"
						android:src="@drawable/wifi"
						android:contentDescription="wifi"
						 android:layout_marginStart="352dp"
						android:layout_marginTop="17dp"
						android:layout_width="18dp"
						android:layout_height="13dp" />


					<RelativeLayout android:id="@+id/__battery"
						android:layout_marginTop="17dp"
						android:layout_marginStart="375dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg____battery_ek1"
							android:background="@drawable/_bg____battery_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="26.6dp"
							android:layout_height="12.5dp" />

						<ImageView android:id="@+id/fill"
							android:src="@drawable/fill"
							android:contentDescription="fill"
							 android:layout_marginStart="1.92dp"
							android:layout_marginTop="1.92dp"
							android:layout_width="20.19dp"
							android:layout_height="8.65dp" />

						<ImageView android:id="@+id/outline"
							android:src="@drawable/outline"
							android:contentDescription="outline"
							 android:alpha="0.40000000596046"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="26.6dp"
							android:layout_height="12.5dp" />

					</RelativeLayout>

					<ImageView android:id="@+id/reception"
						android:src="@drawable/reception"
						android:contentDescription="reception"
						 android:layout_marginStart="328dp"
						android:layout_marginTop="18dp"
						android:layout_width="18.15dp"
						android:layout_height="11dp" />

					<TextView android:id="@+id/time"
						android:textStyle="bold"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="18sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="36dp"
						android:layout_marginTop="15dp"
						android:layout_width="52dp"
						android:layout_height="23.8dp"
						android:text="@string/time_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_31"
					android:layout_marginTop="150dp"
					android:layout_marginStart="28dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__group_31_ek1"
						android:background="@drawable/_bg__group_31_ek1_shape"
						 android:layout_marginStart="-28dp"
						android:layout_marginTop="-150dp"
						android:layout_width="372dp"
						android:layout_height="60dp" />

					<View   android:id="@+id/rectangle_40"
						android:background="@drawable/rectangle_40_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="372dp"
						android:layout_height="60dp" />

					<TextView android:id="@+id/search___"
						android:textSize="18sp"
						android:textColor="@color/_bg__frame_3_ek1_color"
						android:layout_marginLeft="30dp"
						android:layout_marginTop="18dp"
						android:layout_width="175.8dp"
						android:layout_height="32.8dp"
						android:text="@string/search____string"
						 />


					<RelativeLayout android:id="@+id/fe_search"
						android:layout_marginTop="14dp"
						android:layout_marginStart="318dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__fe_search_ek1"
							android:background="@drawable/_bg__fe_search_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="32dp"
							android:layout_height="32dp" />

						<ImageView android:id="@+id/vector_ek1"
							android:src="@drawable/vector_ek1"
							android:contentDescription="vector_ek1"
							 android:layout_marginStart="2.67dp"
							android:layout_marginTop="2.67dp"
							android:layout_width="26.67dp"
							android:layout_height="26.67dp" />

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>