<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".sign_in_activity">

	<androidx.core.widget.NestedScrollView
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:fillViewport="true"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<RelativeLayout
				android:id="@+id/page_getinh_started_ek1"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent">



				<RelativeLayout android:id="@+id/page_sign_in_ek1"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__sign_in_ek2"
						android:background="@drawable/_bg__sign_in_ek2_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="428dp"
						android:layout_height="926dp" />

					<TextView android:id="@+id/register"
						android:textStyle="bold"
						android:textSize="22sp"
						android:textColor="@color/register_color"
						android:layout_marginLeft="49dp"
						android:layout_marginTop="70dp"
						android:layout_width="102.2dp"
						android:layout_height="54.2dp"
						android:text="@string/register_string"
						 />


					<RelativeLayout android:id="@+id/eva_arrow_ios_back_fill"
						android:layout_marginTop="80dp"
						android:layout_marginStart="17dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View
							android:id="@+id/_bg___eva_arrow_ios_back_fill_ek1"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="35dp"
							android:layout_height="30dp" />

						<ImageView android:id="@+id/vector"
							android:src="@drawable/vector"
							android:contentDescription="vector"
							 android:layout_marginStart="11.66dp"
							android:layout_marginTop="6.25dp"
							android:layout_width="10.21dp"
							android:layout_height="17.5dp" />

					</RelativeLayout>

					<View   android:id="@+id/_home_indicator"
						android:background="@drawable/_home_indicator_shape"
						 android:layout_marginStart="155dp"
						android:layout_marginTop="915dp"
						android:layout_width="134dp"
						android:layout_height="5dp" />

					<View   android:id="@+id/rectangle_38"
						android:background="@drawable/rectangle_38_shape"
						 android:layout_marginStart="29dp"
						android:layout_marginTop="320dp"
						android:layout_width="372dp"
						android:layout_height="60dp" />

					<View   android:id="@+id/rectangle_42"
						android:background="@drawable/rectangle_42_shape"
						 android:layout_marginStart="29dp"
						android:layout_marginTop="400dp"
						android:layout_width="372dp"
						android:layout_height="60dp" />

					<View   android:id="@+id/rectangle_40"
						android:background="@drawable/rectangle_40_shape"
						 android:layout_marginStart="29dp"
						android:layout_marginTop="560dp"
						android:layout_width="372dp"
						android:layout_height="60dp" />

					<View   android:id="@+id/rectangle_39"
						android:background="@drawable/rectangle_39_shape"
						 android:layout_marginStart="29dp"
						android:layout_marginTop="480dp"
						android:layout_width="372dp"
						android:layout_height="60dp" />

					<View   android:id="@+id/rectangle_41"
						android:background="@drawable/rectangle_41_shape"
						 android:layout_marginStart="29dp"
						android:layout_marginTop="640dp"
						android:layout_width="372dp"
						android:layout_height="60dp" />

					<TextView android:id="@+id/name"
						android:textSize="18sp"
						android:textColor="@color/_bg__iphone_status_bar_ek1_color"
						android:layout_marginLeft="61dp"
						android:layout_marginTop="339dp"
						android:layout_width="175.8dp"
						android:layout_height="32.8dp"
						android:text="@string/name_string"
						 />

					<TextView android:id="@+id/phone_number"
						android:textSize="18sp"
						android:textColor="@color/_bg__iphone_status_bar_ek1_color"
						android:layout_marginLeft="61dp"
						android:layout_marginTop="419dp"
						android:layout_width="175.8dp"
						android:layout_height="32.8dp"
						android:text="@string/phone_number_string"
						 />

					<TextView android:id="@+id/email"
						android:textSize="18sp"
						android:textColor="@color/_bg__iphone_status_bar_ek1_color"
						android:layout_marginLeft="61dp"
						android:layout_marginTop="579dp"
						android:layout_width="175.8dp"
						android:layout_height="32.8dp"
						android:text="@string/email_string"
						 />

					<TextView android:id="@+id/nic_number"
						android:textSize="18sp"
						android:textColor="@color/_bg__iphone_status_bar_ek1_color"
						android:layout_marginLeft="61dp"
						android:layout_marginTop="499dp"
						android:layout_width="175.8dp"
						android:layout_height="32.8dp"
						android:text="@string/nic_number_string"
						 />

					<TextView android:id="@+id/password"
						android:textSize="18sp"
						android:textColor="@color/_bg__iphone_status_bar_ek1_color"
						android:layout_marginLeft="61dp"
						android:layout_marginTop="659dp"
						android:layout_width="175.8dp"
						android:layout_height="32.8dp"
						android:text="@string/password_string"
						 />

					<View   android:id="@+id/ellipse_11"
						android:background="@drawable/ellipse_11_shape"
						 android:layout_marginStart="173dp"
						android:layout_marginTop="160dp"
						android:layout_width="88dp"
						android:layout_height="88dp" />


					<RelativeLayout android:id="@+id/group_11"
						android:layout_marginTop="790dp"
						android:layout_marginStart="89dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__group_11_ek1"
							android:background="@drawable/_bg__group_11_ek1_shape"
							 android:layout_marginStart="-89dp"
							android:layout_marginTop="-790dp"
							android:layout_width="250dp"
							android:layout_height="60dp" />

						<View   android:id="@+id/rectangle_8"
							android:background="@drawable/rectangle_8_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="250dp"
							android:layout_height="60dp" />

						<TextView android:id="@+id/create_account"
							android:textStyle="bold"
							android:textSize="22sp"
							android:textColor="@color/_bg__sign_in_ek2_color"
							android:layout_marginLeft="50dp"
							android:layout_marginTop="5dp"
							android:layout_width="184.2dp"
							android:layout_height="61.2dp"
							android:text="@string/create_account_string"
							 />

					</RelativeLayout>


					<RelativeLayout android:id="@+id/ant_design_user_add_outlined"
						android:layout_marginTop="178dp"
						android:layout_marginStart="190dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View
							android:id="@+id/_bg__ant_design_user_add_outlined_ek1"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="54dp"
							android:layout_height="52dp" />

						<ImageView android:id="@+id/vector_ek1"
							android:src="@drawable/vector_ek1"
							android:contentDescription="vector_ek1"
							 android:layout_marginStart="7.22dp"
							android:layout_marginTop="5.13dp"
							android:layout_width="39.6dp"
							android:layout_height="41.74dp" />

					</RelativeLayout>
				</RelativeLayout>
			</RelativeLayout>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>